--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,5 @@
     <string name="terminado">Done</string>
     <string name="todo">TODO</string>
     <string name="icono">Icono</string>
+    <string name="firma">Bea</string>
 </resources>
