--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
-    <string name="app_name">MisTareas</string>
-    <string name="mis_tareas">Mis Tareas</string>
+    <string name="app_name">Proyecto Final Android</string>
+    <string name="mis_tareas">Proyecto Final Android</string>
     <string name="title_activity_login">LoginActivity</string>
     <string name="imagen_de_fondo">Imagen de fondo</string>
     <string name="itt">ITT</string>
