--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,11 +17,10 @@
     <string name="title_activity_main2">Main2Activity</string>
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
-    <string name="nav_header_title">Opciones</string>
+    <string name="nav_header_title">Menu</string>
     <string name="nav_header_subtitle">Selecione una</string>
     <string name="nav_header_desc">Navigation header</string>
     <string name="action_settings">Mis Tareas</string>
-
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="descarga_movil_string">Descarga nuestra juego para el movil</string>
+    <string name="juegao_online_string">Juega a nuestra version online</string>
 </resources>
