agregado errores tipo

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,31 +1,16 @@
 <resources>
     <string name="app_name">Little Stars</string>
-    <string name="mis_tareas">Little Stars</string>
-    <string name="title_activity_login">LoginActivity</string>
-    <string name="imagen_de_fondo">Imagen de fondo</string>
-    <string name="itt">ITT</string>
-    <string name="usuario">Usuario</string>
-    <string name="password">Contraseña</string>
-    <string name="crea_una_cuenta">Crea una cuenta</string>
-    <string name="login">LOGIN</string>
-    <string name="terminado">Done</string>
-    <string name="todo">TODO</string>
     <string name="icono">Icono</string>
     <string name="firma">Bea</string>
-    <string name="crearLogin">Crear</string>
-    <string name="backBoton">Back</string>
-    <string name="title_activity_main2">Main2Activity</string>
-    <string name="navigation_drawer_open">Open navigation drawer</string>
-    <string name="navigation_drawer_close">Close navigation drawer</string>
-    <string name="nav_header_title">Menu</string>
-    <string name="nav_header_subtitle">Selecione una</string>
-    <string name="nav_header_desc">Navigation header</string>
-    <string name="action_settings">Mis Tareas</string>
-    <string name="descarga_movil_string">Descargar juego para el movil</string>
-    <string name="juego_online_string">Juega en version online</string>
+    <string name="navigation_drawer_open">Abrir la navegación</string>
+    <string name="navigation_drawer_close">Cerrar la navegación</string>
+    <string name="nav_header_title">Menú</string>
+    <string name="descarga_movil_string">Descargar juego para el móvil</string>
+    <string name="juego_online_string">Juega en la versión online</string>
     <string name="foro">Foro</string>
     <string name="descargas">Descargas</string>
     <string name="noticias">Noticias</string>
     <string name="eventos">Eventos</string>
-    <string name="sign_out">Sign out</string>
+    <string name="sign_out">Desconectarse</string>
+    <string name="texto_descarga">Haz clic en la imagen para iniciar la descarga</string>
 </resources>
